# NRMDTS_myself

./: README.md
cpp/: README.md
cpp/matlab_code/: A.mat  CC.m  UR5_CC.m  UR5_circle_noobstacle.mat  UR5_circle_noobstacle_example.m  UR5_circle_noobstacle_forVideo.m  UR5_circle_withobstacle.mat  UR5_circle_withobstacle_example.m  UR5_circle_withobstacle_forVideo.m  UR5_ring.mat  UR5_sloped_hemisphere_example.m  UR5_vase_noobstacle.mat  UR5_vase_noobstacle_example.m  UR5_vase_noobstacle_forVideo.m  UR5_vase_withobstacle_example.m  UR5_vase_withobstacle_forVideo.m  generateSpiralPath.m  hemisphere.mat  hemisphere_example.m  interface.m  pan.mat  pan_example.m  pipe.mat  pipe_example.m  simple_example.m  sloped_hemi_ellipse.mat  sloped_hemisphere_example.m
cpp/mesh_examples/: 3Dmodel_wok.stl  3Dmodel_wok_refine.stl  Wok.ply  Wok2.ply  Wok3.ply  Wok3_poisson.ply  full_insert_cleaned.ply  full_insert_poison.stl  seat_insert_section.stl
cpp/moveit_code/move_group_yt/: CMakeLists.txt  package.xml
cpp/moveit_code/move_group_yt/include/move_group_yt/: EEPose.h  IK.h  Node.h  Problem.h
cpp/moveit_code/move_group_yt/launch/: move_group_interface_tutorial.launch
cpp/moveit_code/move_group_yt/src/: division.cpp  try.cpp
tntp_implementation/: CMakeLists.txt  package.xml
tntp_implementation/include/: asymp_tntp_algorithm.h  prmstar.h  ur5e_controller.h  ur5e_kinematics.h
tntp_implementation/launch/: demo.launch
tntp_implementation/matlab/: ur_ros_array_joint.m  ur_ros_two_joints.m
tntp_implementation/src/: asymp_tntp_algorithm.cpp  (+4 more)
tntp_with_self_implemented_planner/: README.md  allGreedySolution.m  defineStates.m  lineSolver.m  main_ur5.m  main_ur5e.m  newLineSolver.m
ur5e_and_sherpa/: README.md  main.m  sherpa_ros_testing.asv  sherpa_ros_testing.m  ur_ros_testing.m
(+155 files in other folders)
